# urlshortener

./: .env  .env.dev  .env.prod  README.md  docker-compose.yml  package-lock.json
backend/: .gitignore  Dockerfile  README.md  db.sqlite3  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: config.py
backend/app/models/: urls.py
backend/authentication/: mixins.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
backend/backend/: settings.py  urls.py
backend/docker/: Dockerfile.dev  Dockerfile.prod
backend/shortener/: admin.py  models.py  serializers.py  urls.py  views.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: auth.jsx
frontend/src/components/: Logo.jsx  Navbar.jsx  PrivateRoute.jsx  Shortener.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Home.jsx  Login.jsx  Register.jsx  Urls.jsx
frontend/src/utils/: DecodeToken.js
